--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
@@ -1393,6 +1393,10 @@ code, pre {
     line-height: 18px
 }
 
+.sidebar-box div.badge {
+    padding: 15px 15px 0;
+}
+
 
 .content-box.sidebar-recent #activity li {
     padding: 0
