--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -58,6 +58,16 @@
 {% endspaceless %}
 {% endblock %}
 
+{% block badge %}
+{% spaceless %}
+<textarea rows="5" cols="23">
+    <a href="{{ url('bundle_show', { 'ownerName': bundle.ownerName , 'name': bundle.name }) }}">
+        <img src="{{ url('bundle_get_badge', { 'ownerName': bundle.ownerName , 'name': bundle.name }) }}" />
+    </a>    
+</textarea>
+{% endspaceless %}
+{% endblock %}
+
 {% block right %}
     <div class="sidebar-box sidebar-bundle-info">
         <hgroup>
@@ -217,16 +227,13 @@
             <h2>{% trans %}bundles.show.badge.title{% endtrans %}</h2>
         </hgroup>
 
-        <section>
-            <ul>
-                {% if bundle_badge_url(bundle) %}
-                <li class="badge">
-                    <img src="{{ bundle_badge_url(bundle) }}" alt="{{ bundle.name }}" title="{{ bundle.name }}">
-                </li>
-                {% else %}
-                <li>{% trans %}bundles.show.badge.wait_generation{% endtrans %}</li>
-                {% endif %}
-            </ul>
+        <section style="margin: 0 0 15px;">
+            <div class="badge" data-placement="left" data-content='{{ block('badge') }}' data-title="{% trans %}bundles.show.badge.embed{% endtrans %}:">
+                <img src="{{ path('bundle_get_badge', { 'ownerName': bundle.ownerName , 'name': bundle.name }) }}" title="{% trans %}bundles.show.badge.click_for_embed{% endtrans %}">
+            </div>
+            <div class="badge" data-placement="left" data-content='{{ block('badge') }}' data-title="{% trans %}bundles.show.badge.embed{% endtrans %}:">
+                <img src="{{ path('bundle_get_badge_short', { 'ownerName': bundle.ownerName , 'name': bundle.name }) }}" title="{% trans %}bundles.show.badge.click_for_embed{% endtrans %}">
+            </div>
         </section>
     </div>
 {% endblock %}
