Update css embed badge code style to increase readability

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
@@ -1397,6 +1397,13 @@ code, pre {
     padding: 15px 15px 0;
 }
 
+.badge-code {
+    font-size: 10px;
+    width: 203px;
+    height: 85px;
+    color: #686868;
+}
+
 
 .content-box.sidebar-recent #activity li {
     padding: 0
