Updated deps, fix Keyword entity missing relation, fix for invalid translation keys for FAQ

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/faqScoring.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/faqScoring.html.twig
@@ -1,13 +1,13 @@
 {% extends "KnpBundlesBundle::layout/900px.html.twig" %}
 
-{% block title %}{% trans %}faq_scoring.meta.title{% endtrans %}{% endblock %}
+{% block title %}{% trans %}faq_scoring.title{% endtrans %}{% endblock %}
 
 {% block description %}{% trans %}faq_scoring.description{% endtrans %}{% endblock %}
 
 {% block intro %}
 <div id="intro">
-    <h1>KnpBundles FAQ Scoring</h1>
-    <h2>Frequent answers to questions regarding bundle scoring issues</h2>
+    <h1>{% trans %}faq_scoring.title{% endtrans %}</h1>
+    <h2>{% trans %}faq_scoring.description{% endtrans %}</h2>
 </div>
 {% endblock %}
 
