force browser to get the latest favicon.ico or png

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -7,7 +7,7 @@
     <meta name="description" content="{% block description %}{% endblock %}">
     {% block meta %}{% endblock %}
 
-    <link rel="shortcut icon" href="{{ asset('favicon.png') }}" type="image/png">
+    <link rel="shortcut icon" href="{{ asset('favicon.png?v=2') }}" type="image/png">
     <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon.png') }}">
 
     <link rel="alternate" href="{{ path('latest', {'format': 'atom'}) }}" title="ATOM" type="application/atom+xml">
