Fix color in hex code for styles

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
@@ -1046,7 +1046,7 @@ a.bundle-license-unknown {
 }
 
 .content-box h2.version {
-    background-color: whiteSmoke;
+    background-color: #F7F7F9;
     padding-left: 5px;
 }
 
