Add displaying a composer line to relative bundle version Add composer install line for dependencies versions Revert activities tab & update tab icons for dependencies
Reduce font size for bundle main tabs

Add collapse for depndencies tab versions
- add collapse code to the bootstrap js

Add /extra/ field to fetch branch-alias for composer line display

Add /name/ to github repo fetch, for composer line
- extend fixtures to operate with bundle packagist name and alias version for dev-master branch

Add displaying a composer line to relative bundle version

Fix faling update bundle dependencies versions test

Update behat feature context default bundle fixture

Refactor show bundle template to use marco direct w/o import

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
@@ -835,6 +835,11 @@ code, pre {
     border: 1px solid #dedede
 }
 
+.content-box.tabbable .nav-tabs > li {
+    font-size: 13px;
+    margin-bottom: -2px;
+}
+
 .content-box hgroup {
     border-bottom: 2px solid #DEDEDE
 }
@@ -1052,6 +1057,10 @@ a.bundle-license-unknown {
 
 .content-box .shift-right {
     padding-left: 10px;
+}
+
+.content-box .pull-right {
+    float: right;
 }
 
 /* Content - modal settings*/
