--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
@@ -801,7 +801,7 @@ code, pre {
     padding-bottom: 10px;
     padding-top: 10px;
     border-radius: 0;
-    border-width: 0 1px 1px 0;
+    border-width: 0 1px 0 0;
     border-color: #ddd;
     font-weight: bold
 }
