Add KNP University sponsor banner

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.html.twig
@@ -50,6 +50,20 @@
     </section>
 </div>
 
+<div class="sidebar-box sidebar-knpuniversity">
+    <section>
+        <h1><a href="http://knpuniversity.com/">Screencasts for Symfony2</a></h1>
+
+        <div class="logo">
+            <a href="http://knpuniversity.com/" class="play" src="{{ asset('bundles/knpbundles/images/logo_knpuniversity_play.png') }}" alt="KNP University">
+            </a>
+        </div>
+
+        <!-- <div class="baseline">Your comfy place for Symfony and PHP Tutorials</div> -->
+        <div class="baseline">Your Symfony and PHP Video Tutorials</div>
+    </section>
+</div>
+
 <div class="sidebar-box sidebar-developers-list clearfix">
     <hgroup>
         <h2>Newest developers</h2>
