--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -11,7 +11,14 @@
     <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon.png') }}">
 
     <link rel="alternate" href="{{ path('latest', {'format': 'atom'}) }}" title="ATOM" type="application/atom+xml">
-
+    <!--[if gte IE 9]>
+    <style type="text/css">
+        .gradient {
+            filter: none;
+        }
+    </style>
+    <![endif]-->
+    <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
     {% stylesheets filter="cssrewrite, ?yui_css"
         'bundles/knpbundles/css/bootstrap.min.css'
         'bundles/knpbundles/css/styles.css'
