--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.html.twig
@@ -52,15 +52,13 @@
 
 <div class="sidebar-box sidebar-knpuniversity">
     <section>
-        <h1><a href="http://knpuniversity.com/">Screencasts for Symfony2</a></h1>
+        <h1><a href="http://knpuniversity.com/" title="KNP University - PHP and Symfony Video Tutorial Screencasts">Screencasts for Symfony2</a></h1>
 
-        <div class="logo">
-            <a href="http://knpuniversity.com/" class="play" src="{{ asset('bundles/knpbundles/images/logo_knpuniversity_play.png') }}" alt="KNP University">
-            </a>
-        </div>
+        <a class="logo" href="http://knpuniversity.com/" title="KNP University - PHP and Symfony Video Tutorial Screencasts">
+            KNP University
+        </a>
 
-        <!-- <div class="baseline">Your comfy place for Symfony and PHP Tutorials</div> -->
-        <div class="baseline">Your Symfony and PHP Video Tutorials</div>
+        <a class="baseline" href="http://knpuniversity.com/" title="KNP University - PHP and Symfony Video Tutorial Screencasts">Your Symfony and PHP Video Tutorials</a>
     </section>
 </div>
 
