Removed Travis image size

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -124,7 +124,7 @@
                 <li title="{% trans %}bundles.show.infos.travis{% endtrans %}">
                     <i class="icon-cogs"></i>
                     <a href="{{ bundle.travisUrl }}">
-                        <img src="https://secure.travis-ci.org/{{ bundle.ownerName }}/{{ bundle.name }}.png" alt="Travis Build Status" width="89" height="13"/>
+                        <img src="https://secure.travis-ci.org/{{ bundle.ownerName }}/{{ bundle.name }}.png" alt="Travis Build Status">
                     </a>
                 </li>
                 {%- endif -%}
