Issue #121: Added support for marking a bundle as favorite.

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
@@ -774,6 +774,13 @@ code, pre {
     margin: 15px 0 0;
 }
 
+#bundle-actions .btn {
+    margin-right: 0;
+}
+
+#bundle-actions .btn:first-child {
+    margin-right: 2px;
+}
 
 #content-holder {
     float: left;
