--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -34,7 +34,7 @@
 
     <div id="bundle-actions">
         <a class="btn btn-large icon-download" href="{{ bundle.gitHubUrl }}" style="width:90px">&nbsp;{% trans %}bundles.show.github{% endtrans %}</a>
-        <a class="btn btn-large btn-fav icon-heart" href="{{ path('bundle_favorite', { 'ownerName': bundle.ownerName, 'name': bundle.name }) }}" style="width:90px;{% if isFavoritedByDeveloper %}color:#000;{% endif %}">
+        <a id="fav-bundle-btn" class="btn btn-large btn-fav icon-heart {% if isFavoritedByDeveloper %}favorited{% endif %}" href="{{ path('bundle_toggle_favorite', { 'ownerName': bundle.ownerName, 'name': bundle.name }) }}" style="width:90px;">
             &nbsp;
             {%- if isFavoritedByDeveloper -%}
                 {% trans %}bundles.show.favorited{% endtrans %}
